3tierk8s/k8s-manifests/1.namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-management-app
  labels:
    name: employee-management-app
